--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarCuotaPago.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarCuotaPago.cshtml
@@ -1,10 +1,7 @@
 ﻿
-@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.ConceptoPago
+@model WebMigradorCtasPorCobrar.Models.Entities.Migracion.CuotaPago
 @Scripts.Render("~/bundles/jqueryval")
 
-@{
-    string tipoObs = ViewBag.TipoObserv;
-}
 <div class="modal-header">
     <h5 class="modal-title">
         Editar Cuota de pago:
@@ -18,67 +15,65 @@
         <div class="col-12">
             <div class="row">
                 <div class="col-12">
-                    @*@using (Ajax.BeginForm("Save", "ConceptoPago", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))*@
-                    @using (Html.BeginForm("Save", "ConceptoPago", new { area = "" }, FormMethod.Post, new { id = "form_cppri" }))
+                    @*@using (Ajax.BeginForm("Save", "CuotaPago", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))*@
+                    @using (Html.BeginForm("Save", "CuotaPago", new { area = "" }, FormMethod.Post, new { id = "form_cpdes" }))
                     {
                         @Html.Hidden("submited", 0)
                         @Html.AntiForgeryToken()
                         @Html.HiddenFor(model => model.I_RowID)
                         @Html.HiddenFor(model => model.I_ProcedenciaID)
-                        @Html.Hidden("tipoObserv", tipoObs)
 
                         <div class="form-row">
                             <div class="form-group col-md-3 col-4">
-                                @Html.Label("Código concepto", new { @class = "col-form-label", @for = "Id_cp" })
-                                @Html.TextBoxFor(model => model.Id_cp, new { @class = "form-control form-control-sm" })
-                            </div>
-                            <div class="form-group col-md-3 col-4">
-                                @Html.Label("Código cuota", new { @class = "col-form-label", @for = "Cuota_pago" })
+                                @Html.Label("Código Cuota", new { @class = "col-form-label", @for = "Cuota_pago" })
                                 @Html.TextBoxFor(model => model.Cuota_pago, new { @class = "form-control form-control-sm" })
                             </div>
                             <div class="form-group col-md-6 col-5">
                                 @Html.Label("Descripción", new { @class = "col-form-label", @for = "Descripción" })
                                 @Html.TextBoxFor(model => model.Descripcio, new { @class = "form-control form-control-sm" })
                             </div>
+                            <div class="form-group col-md-3 col-3">
+                                @Html.Label("Código bnc", new { @class = "col-form-label", @for = "Codigo_bnc" })
+                                @Html.TextBoxFor(model => model.Codigo_bnc, new { @class = "form-control form-control-sm" })
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-3 col-4">
+                                @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
+                                @Html.TextBoxFor(model => model.Fch_venc_s, new { @class = "form-control form-control-sm" })
+                            </div>
+                            <div class="form-group col-md-6 col-5">
+                                @Html.Label("Categoría (Equivalencia)", new { @class = "col-form-label", @for = "I_CatPagoID" })
+                                @Html.DropDownListFor(model => model.I_CatPagoID, ViewBag.CategoriasBnc as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
+                            </div>
+                            <div class="form-group col-md-3 col-3">
+                                <label>&nbsp;</label>
+                                <div class="form-check px-5 pt-2">
+                                    @Html.CheckBoxFor(model => model.C_mora, new { @class = "form-check-input" })
+                                    @Html.Label("Mora", new { @class = "col-check-label" })
+                                </div>
+                            </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-3">
                                 @Html.Label("Año", new { @class = "col-form-label", @for = "I_Anio" })
-                                @Html.TextBoxFor(model => model.Ano, new { @class = "form-control form-control-sm" })
+                                @Html.TextBoxFor(model => model.I_Anio, new { @class = "form-control form-control-sm" })
                             </div>
                             <div class="form-group col-3">
-                                @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_TipPerID" })
-                                @Html.DropDownListFor(model => model.I_TipPerID, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
+                                @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
+                                @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
                             </div>
                             <div class="form-group col-3">
-                                @Html.Label("Monto", new { @class = "col-form-label", @for = "Monto" })
-                                @Html.TextBoxFor(model => model.Monto, new { @class = "form-control form-control-sm" })
+                                @Html.Label("Prioridad", new { @class = "col-form-label", @for = "Prioridad" })
+                                @Html.TextBoxFor(model => model.Prioridad, new { @class = "form-control form-control-sm" })
                             </div>
                             <div class="form-group col-3">
                                 @Html.Label("Procedencia", new { @class = "col-form-label" })
                                 @Html.DropDownListFor(model => model.I_ProcedenciaID, ViewBag.Procedencia as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="form-group col-md-3 col-4">
-                                @Html.Label("Tipo de Alumno", new { @class = "col-form-label", @for = "I_TipAluID" })
-                                @Html.DropDownListFor(model => model.I_TipAluID, ViewBag.TipoAlumno as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
-                            </div>
-                            <div class="form-group col-md-3 col-4">
-                                @Html.Label("Grado", new { @class = "col-form-label", @for = "Grado" })
-                                @Html.DropDownListFor(model => model.I_TipGradoID, ViewBag.Grados as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
-                            </div>
-                            <div class="form-group col-3">
-                                @Html.Label("Omitir validación", new { @for = "B_Correcto", @class = "col-check-label" })
-                                <div class="form-check">
-                                    @Html.CheckBoxFor(model => model.B_Correcto, new { @class = "form-check-input" })
-                                </div>
-                            </div>
 
-                        </div>
-                        <br />
                         <div class="col-md-12" style="display:none" id="loading">
-
                             <h6>Actualizando los datos...</h6>
 
                             <div class="progress">
@@ -95,14 +90,6 @@
                 @Html.Partial("_OtrasTablas", Model)
             </div>
         </div>
-        <div id="processing" class="container-fluid" style="display:none;">
-            <p style="margin:50px;" class="text-center text-muted"><i class="fa fa-spin fa-3x fa-cog"></i></p>
-        </div>
-    </div>
-    <div id="main_modal_footer" class="modal-footer">
-        @*<div id="main_modal_footer" class="modal-footer" style="justify-content:space-between">
-            <button type="button" id="btn_addObs" class="btn btn-info" data-dismiss="modal" data-url="@Url.Action("AgregarObservacion", ViewBag.Controller, new { id = ViewBag.RowID })"><i class="fa fa-plus"></i> Agregar</button>*@
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
     </div>
 </div>
 
@@ -112,11 +99,11 @@
 
     $("#btnsubmit").on('click', function (event) {
         event.preventDefault();
-        var form = $('#form_cppri');
+        var form = $('#form_cpdes');
         Swal.fire({
             title: "¡Atención, posible incosistencia!",
-            text: "Se ha identificado que concepto de pago se encuentra asociada a más de un año.\n" +
-                "Al guardar, el año tomará el valor seleccionado y deberá corregir las cuotas de pago en las obligaciones relacionados.",
+            text: "Se ha identificado que la cuota de pago se encuentra asociada a más de un año.\n" +
+                "Al guardar, el año tomará el valor seleccionado y deberá corregir las cuotas de pago en los conceptos de pago y obligaciones relacionados.",
             type: "warning",
             showCancelButton: true,
             confirmButtonColor: '#ff830f',
@@ -137,13 +124,13 @@
                         $('#div_msg').html(data);
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
-                        $('#form_cppri').append(`<div class="col-12">
-                                                    <div id="div-alert" class="mt-3">
-                                                        <div class="text-center alert alert-danger">
-                                                            <i class="fa fa-times">&nbsp;</i>${jqXHR.responseText}
-                                                        </div>
-                                                    </div>
-                                                </div>`);
+                        $('#form_cpdes').append(`<div class="col-12">
+                                                            <div id="div-alert" class="mt-3">
+                                                                <div class="text-center alert alert-danger">
+                                                                    <i class="fa fa-times">&nbsp;</i>${jqXHR.responseText}
+                                                                </div>
+                                                            </div>
+                                                        </div>`);
                     },
                     complete: function () {
                         $('#loading').hide();
