cambios migracion conceptos y obligaciones

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosConceptoPago.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosConceptoPago.cshtml
@@ -40,12 +40,12 @@
                 <tr class="thead-light">
                     <th class="text-right" scope="row">Tipo obligación</th>
                     <td class="text-center">@Model.ConceptoPagoMigracion.Tipo_oblig</td>
-                    <td class="text-center">@Model.ConceptoPagoCtasCobrar.I_TipoObligacion</td>
+                    <td class="text-center">@Model.ConceptoPagoCtasCobrar.T_Obligigacion</td>
                 </tr>
                 <tr class="thead-light">
                     <th class="text-right" scope="row">Clasificador</th>
-                    <td class="text-center">@Model.ConceptoPagoMigracion.Clasificad.ToString()</td>
-                    <td class="text-center"@Model.ConceptoPagoCtasCobrar.T_Clasificador</td>
+                    <td class="text-center">@Model.ConceptoPagoMigracion.Clasificad</td>
+                    <td class="text-center">@Model.ConceptoPagoCtasCobrar.T_Clasificador</td>
                 </tr>
                 <tr class="thead-light">
                     <th class="text-right" scope="row">Monto</th>
