--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarCuotaPago.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarCuotaPago.cshtml
@@ -47,7 +47,10 @@
                                 @Html.DropDownListFor(model => model.I_CatPagoID, ViewBag.CategoriasBnc as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
                             </div>
                             <div class="form-group col-md-3 col-3">
-                                <label>&nbsp;</label>
+                                <div class="form-check px-5 pt-2">
+                                    @Html.CheckBoxFor(model => model.B_Correcto, new { @class = "form-check-input" })
+                                    @Html.Label("Omitir", new { @class = "col-check-label" })
+                                </div>
                                 <div class="form-check px-5 pt-2">
                                     @Html.CheckBoxFor(model => model.C_mora, new { @class = "form-check-input" })
                                     @Html.Label("Mora", new { @class = "col-check-label" })
