--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosMigracionTasas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosMigracionTasas.cshtml
@@ -29,8 +29,6 @@
 {
     columns.Add(c => c.Id_cp).Titled("Codigo").Filterable(true);
     columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
-    columns.Add(c => c.Ano).Titled("Año").Filterable(true);
-    columns.Add(c => c.P).Titled("Periodo").Filterable(true);
     columns.Add(c => c.Cuota_pago_desc).Titled("Cuota pago").Filterable(true);
     columns.Add(c => c.Tipo_oblig).Css("text-center").Encoded(false).Sanitized(false).Titled("Obligación").Filterable(true)
             .RenderValueAs(model => model.Tipo_oblig ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-info\"></i></span>")
@@ -39,7 +37,7 @@
             .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-warning\"></i></span>")
                                                      : Html.Raw("<span class=\"h5\"><i class=\"fa fa-minus-circle text-secondary\"></i></span>"));
     //columns.Add(c => c.Nro_pagos).Titled("Nro Pagos").Filterable(true);
-    columns.Add(c => c.Monto).Css("right").Titled("Monto").Filterable(true);
+    columns.Add(c => c.Monto).Css("text-right").Titled("Monto").Filterable(true);
     columns.Add(c => c.B_ExisteCtas).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. Cobrar").Filterable(true)
             .RenderValueAs(model => model.B_ExisteCtas ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
                                                        : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
