--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Home/Index.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Home/Index.cshtml
@@ -3,10 +3,26 @@
 }
 
 <div class="jumbotron">
-
+    <h1>Dashboard</h1>
 </div>
 
 <div class="row">
-   
-
+    <div class="col-sm-6">
+        <h2>Obligaciones</h2>
+        <div class="card">
+            <div class="card-header"><h5>Cuotas de pago</h5></div>
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <h2>Tasas</h2>
+        <div class="card">
+            <div class="card-header"><h5>Cuotas de pago</h5></div>
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </div>
 </div>
