--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/Tasas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/Tasas.cshtml
@@ -1,21 +1,21 @@
 ﻿@{
-    ViewBag.Title = "OBLIGACIONES DE PAGO";
+    ViewBag.Title = "CONCEPTOS DE PAGO";
 
     string action = ViewBag.Action;
     string controller = ViewBag.Controller;
-    var procedencia_value = WebMigradorCtasPorCobrar.Models.Helpers.Procedencia.Pregrado;
+    var procedencia_value = WebMigradorCtasPorCobrar.Models.Helpers.Procedencia.Tasas;
 }
 
 <div class="py-3">
-    <h1>Pregrado <small>OBLIGACIONES DE PAGO</small></h1>
+    <h1>Tasas <small>CONCEPTOS DE PAGO</small></h1>
 </div>
 <div class="row">
     <div class="col-md-2">
         <fieldset>
             <legend class="pb-3 font-weight-bold">OPCIONES</legend>
-            <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Pregrado", "Obligaciones", new { partial = "TemporalPagos" })">Temporal de pagos</a>
-            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Pregrado", "Obligaciones", new { partial = "ProcesoMigracion" })">Proceso de migración</a>
-            <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Pregrado", "Obligaciones", new { partial = "DatosMigracion" })">Registros para migración</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Tasas", "ConceptoPago", new { partial = "TemporalPagos" })">Temporal de pagos</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Tasas", "ConceptoPago", new { partial = "ProcesoMigracion" })">Proceso de migración</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Tasas", "ConceptoPago", new { partial = "DatosMigracion" })">Registros para migración</a>
         </fieldset>
     </div>
     <div class="col-md-10">
