--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/Cuded.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/Cuded.cshtml
@@ -14,7 +14,7 @@
         <fieldset>
             <legend class="pb-3 font-weight-bold">OPCIONES</legend>
             <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Cuded", "Obligaciones", new { partial = "TemporalPagos" })">Temporal de pagos</a>
-            <a class="btn btn-outline-dark btn-block my-3" id="btn-cpp" href="@Url.Action("Cuded", "Obligaciones", new { partial = "CtasPorCobrar" })">Cuentas por cobrar</a>
+            @*<a class="btn btn-outline-dark btn-block my-3" id="btn-cpp" href="@Url.Action("Cuded", "Obligaciones", new { partial = "CtasPorCobrar" })">Cuentas por cobrar</a>*@
             <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Cuded", "Obligaciones", new { partial = "ProcesoMigracion" })">Proceso de migración</a>
             <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Cuded", "Obligaciones", new { partial = "DatosMigracion" })">Registros para migración</a>
         </fieldset>
