cambios en estructura de procedimientos de alumno

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
 
     <footer class="main-footer">
         <div class="container-fluid">
-            <p class="text-muted">&copy @DateTime.Now.Year Elaborado por <a href="http://www.unfv.edu.pe/ceuci/">CEUCI - UNFV</a></p>
+            <p class="text-muted">&copy @DateTime.Now.Year Elaborado por <a href="javascript:;">OCGTI - UNFV</a></p>
         </div>
     </footer>
 
