--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
@@ -32,7 +32,7 @@
             <ul id="concepto-pago" class="collapse">
                 <li><a href="@Url.Action("Pregrado", "ConceptoPago", new { area = "" })"><i class="fa fa-fw bi-person-lines-fill"></i>&nbsp; Pregrado</a></li>
                 <li><a href="@Url.Action("Posgrado", "ConceptoPago", new { area = "" })"><i class="fa fa-fw fa-graduation-cap"></i>&nbsp; Posgrado</a></li>
-                <li><a href="@Url.Action("Cuded", "ConceptoPago", new { area = "" })"><i class="fa fa-fw bi-globe2"></i>&nbsp; CUDED</a></li>
+                <li><a href="@Url.Action("Cuded", "", new { area = "" })"><i class="fa fa-fw bi-globe2"></i>&nbsp; CUDED</a></li>
                 <li><a href="@Url.Action("Tasas", "ConceptoPago", new { area = "" })"><i class="fa fa-fw bi-receipt-cutoff""></i>&nbsp; Tasas</a></li>
             </ul>
         </li>
@@ -45,7 +45,7 @@
                 <li><a href="@Url.Action("Pregrado", "Obligaciones", new { area = "" })"><i class="fa fa-fw bi-person-lines-fill"></i>&nbsp; Pregrado</a></li>
                 <li><a href="@Url.Action("Posgrado", "Obligaciones", new { area = "" })"><i class="fa fa-fw fa-graduation-cap"></i>&nbsp; Posgrado</a></li>
                 <li><a href="@Url.Action("Cuded", "Obligaciones", new { area = "" })"><i class="fa fa-fw bi-globe2"></i>&nbsp; CUDED</a></li>
-                <li><a href="@Url.Action("Tasas", "Obligaciones", new { area = "" })"><i class="fa fa-fw bi-receipt-cutoff"></i>&nbsp; Tasas</a></li>
+                <li><a href="@Url.Action("Index", "Tasas", new { area = "" })"><i class="fa fa-fw bi-receipt-cutoff"></i>&nbsp; Tasas</a></li>
             </ul>
         </li>
 
@@ -58,7 +58,7 @@
                 <li><a href="@Url.Action("Pregrado", "Reportes", new { area = "" })"><i class="fa fa-fw bi-person-lines-fill"></i>&nbsp; Pregrado</a></li>
                 <li><a href="@Url.Action("Posgrado", "Reportes", new { area = "" })"><i class="fa fa-fw fa-graduation-cap"></i>&nbsp; Posgrado</a></li>
                 <li><a href="@Url.Action("Cuded", "Reportes", new { area = "" })"><i class="fa fa-fw bi-globe2"></i>&nbsp; CUDED</a></li>
-                <li><a href="@Url.Action("Cuded", "Reportes", new { area = "" })"><i class="fa fa-fw bi-receipt-cutoff""></i>&nbsp; Tasas</a></li>
+                <li><a href="@Url.Action("Tasas", "Reportes", new { area = "" })"><i class="fa fa-fw bi-receipt-cutoff""></i>&nbsp; Tasas</a></li>
             </ul>
         </li>
 
