--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Reportes/Pregrado.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Reportes/Pregrado.cshtml
@@ -1,1 +1,9 @@
 ﻿
+<div class="py-3">
+    <h1>Pregrado <small>REPORTES</small></h1>
+</div>
+<div class="row">
+    <div class="col-md-12">
+
+    </div>
+</div>
