--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_ProcesoMigracion.cshtml
@@ -13,7 +13,7 @@
 <div class="col-md-12 my-4">
     <div class="row jumbotron" style="min-height: 450px">
         <div class="card text-center w-100">
-            <div id="processing" class="container-fluid" style="display:none;">
+            <div id="processing" class="container-fluid py-4" style="display:none;">
                 <div class="d-flex justify-content-center">
                     <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
                         <span class="sr-only" id="sr-message"></span>
