--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_ProcesoMigracion.cshtml
@@ -11,7 +11,7 @@
 
 <div class="col-md-12 my-4">
     <div class="row jumbotron" style="min-height: 450px">
-        <div class="card text-center w-100" id="result-periodos" style="display:none;">
+        <div class="card text-center w-100" id="result-periodos py-4" style="display:none;">
             <div id="processing" class="container-fluid" style="display:none;">
                 <div class="d-flex justify-content-center">
                     <div class="spinner-border text-info" role="status" style="width: 5rem; height: 5rem;">
