--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Reportes/Tasas.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Reportes/Tasas.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="py-3">
-    <h1>Posgrado <small>REPORTES</small></h1>
+    <h1>Tasas <small>REPORTES</small></h1>
 </div>
 <div class="row">
     <div class="col-md-12">
