--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
@@ -1,9 +1,18 @@
 ﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Helpers.Response>
 
-@foreach (var response in Model)
-{
-    <div class="card-body">
-        <h5 class="card-title">Resultado: @response.CurrentID</h5>
-        <div class="card-text alert alert-@response.Color">@Html.Raw(response.Message)</div>
-    </div>
-}
+<div class="row">
+
+    @foreach (var response in Model)
+    {
+        <div class="col-sm-2 col-md-4">
+            <div class="card text-white bg-@response.Color my-3">
+                <div class="card-header"><strong>@response.CurrentID</strong></div>
+                <div class="card-body">
+                    <h5 class="card-title">Resultado</h5>
+                    <p class="card-text h5">@Html.Raw(response.Message)</p>
+                </div>
+            </div>
+        </div>
+    }
+
+</div>
